--- a/css/home.css
+++ b/css/home.css
@@ -202,11 +202,12 @@ section{
     margin-top: 8vw;
     width:100px;
     height: 100px;
+    opacity: 0.5;
     border-radius: 90px;
 }
 .quote{
     color: silver;
-    font-size: 3vw;
+    font-size: 2vw;
 
 }
 .blog{
